stars-demo/00-management-ui-dev.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 99999-9000-1002-dev
---
apiVersion: v1
kind: Service
metadata:
  name: management-ui 
  namespace: 99999-9000-1002-dev 
spec:
  type: NodePort
  ports:
  - port: 900001 
    targetPort: 900001
    nodePort: 30002
  selector:
    namespace: 99999-9000-1002-dev
