stars-demo/00-management-ui-prod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 99999-9000-1002-prod
---
apiVersion: v1
kind: Service
metadata:
  name: management-ui 
  namespace: 99999-9000-1002-prod 
spec:
  type: NodePort
  ports:
  - port: 900001 
    targetPort: 900001
    nodePort: 30003
  selector:
    namespace: 99999-9000-1002-prod
