stars-demo/01-client-dev.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 99990-900002-1002-dev
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: 99990-900002-1002-dev
spec:
  ports:
  - port: 9000 
    targetPort: 9000
  selector:
    namespace: 99990-900002-1002-dev
