stars-demo/01-psaas-prod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 99991-900001-900001-prod
---
apiVersion: v1
kind: Service
metadata:
  name: psaas 
  namespace: 99991-900001-900001-prod
spec:
  ports:
  - port: 443 
    targetPort: 443 
  selector:
    namespace: 99991-900001-900001-prod
