stars-demo/02-web-prod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 99994-990004-1001-prod
---
apiVersion: v1
kind: Service
metadata:
  name: web 
  namespace: 99994-990004-1001-prod
spec:
  ports:
  - port: 443 
    targetPort: 443 
  selector:
    namespace: 99994-990004-1001-prod
