stars-demo/03-app-prod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 99994-990004-1002-prod
---
apiVersion: v1
kind: Service
metadata:
  name: app 
  namespace: 99994-990004-1002-prod
spec:
  ports:
  - port: 9443
    targetPort: 9443 
  selector:
    namespace: 99994-990004-1002-prod
