stars-demo/04-db-dev.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 99993-990003-1003-dev
---
apiVersion: v1
kind: Service
metadata:
  name: db 
  namespace: 99993-990003-1003-dev
spec:
  ports:
  - port: 1521
    targetPort: 1521 
  selector:
    namespace: 99993-990003-1003-dev
