stars-demo/np-client-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99990-900002-1002-dev
  name: 99990-900002-1002-dev.client-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99991-900001-900001-dev
    ports:
    - protocol: TCP
      port: 443
  - to:
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
