stars-demo/np-db-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99993-990003-1003-dev
  name: 99993-990003-1003-dev.app-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99994-990004-1002-dev
    ports:
    - protocol: TCP
      port: 1521
  egress:
  - to:
    ports:
    - port: 53
      protocol: UDP
