stars-demo/np-web-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99994-990004-1001-dev
  name: 99994-990004-1001-dev.web-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99991-900001-900001-dev
    ports:
    - protocol: TCP
      port: 443
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99994-990004-1002-dev
    ports:
    - protocol: TCP
      port: 9443
  - to:
    ports:
    - port: 53
      protocol: UDP
